<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/content_receipt"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="@dimen/activity_vertical_margin"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:background="@drawable/background_receipt"
        tools:context="com.mastercard.labs.mpqrpayment.receipt.ReceiptActivity">

    <ImageView
            android:id="@+id/img_tick"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:src="@drawable/tick"
            android:contentDescription="@string/tick"/>

    <TextView
            android:id="@+id/txt_payment_success_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/receipt_success_payment"
            android:layout_below="@id/img_tick"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:layout_centerHorizontal="true"
            android:textSize="@dimen/size_x"
            android:textColor="@color/colorWhite"/>

    <android.support.v7.widget.CardView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true">

        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="30dp"
                android:background="@color/colorWhite"
                android:orientation="vertical">

            <TextView
                    android:id="@+id/txt_total_amount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textColor="@color/colorTextMainColor"
                    android:textSize="@dimen/size_24"
                    android:fontFamily="@string/font_family_medium"
                    android:layout_alignParentTop="true"
                    tools:text="INR 120.90"/>

            <View
                    android:id="@+id/border"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/rectangle_border_width"
                    android:layout_below="@id/txt_total_amount"
                    android:layout_marginTop="20dp"
                    android:background="@color/colorPinkishGrey"/>

            <TextView
                    android:id="@+id/txt_merchant_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/border"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:textSize="@dimen/size_x"
                    tools:text="Merchant Name"/>

            <TextView
                    android:id="@+id/txt_merchant_city"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/txt_merchant_name"
                    android:layout_centerHorizontal="true"
                    android:drawablePadding="5dp"
                    android:layout_marginTop="5dp"
                    android:textSize="@dimen/size_x"
                    tools:text="City"/>
            <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toStartOf="@id/txt_merchant_city"
                    android:layout_alignTop="@id/txt_merchant_city"
                    android:layout_alignBottom="@id/txt_merchant_city"
                    android:layout_marginEnd="5dp"
                    android:contentDescription="@string/city"
                    android:src="@drawable/ic_city"/>

            <TextView
                    android:id="@+id/txt_amount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/txt_merchant_city"
                    android:layout_marginTop="30dp"
                    android:text="@string/amount"
                    android:textSize="@dimen/size_x"
                    android:layout_alignParentStart="true"/>
            <TextView
                    android:id="@+id/txt_amount_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignTop="@id/txt_amount"
                    android:layout_alignBottom="@id/txt_amount"
                    android:textSize="@dimen/size_x"
                    android:textColor="@color/colorHighlightText"
                    tools:text="120.00"/>

            <TextView
                    android:id="@+id/txt_tip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/txt_amount"
                    android:layout_marginTop="5dp"
                    android:text="@string/tip"
                    android:textSize="@dimen/size_x"
                    android:layout_alignParentStart="true"/>
            <TextView
                    android:id="@+id/txt_tip_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignTop="@id/txt_tip"
                    android:layout_alignBottom="@id/txt_tip"
                    android:textSize="@dimen/size_x"
                    android:textColor="@color/colorHighlightText"
                    tools:text="0.90"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/txt_tip"
                android:layout_marginTop="20dp"
                >
                <TextView
                    android:id="@+id/txt_payment_card"
                    android:layout_height="wrap_content"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:text="@string/payment_card_used"
                    android:textSize="@dimen/size_x"/>
                <ImageView
                    android:id="@+id/img_card_logo"
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:layout_marginEnd="10dp" android:contentDescription="@string/paymentInstrument"
                    tools:src="@drawable/mastercard_logo"/>
                <TextView
                    android:id="@+id/txt_payment_card_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/size_x"
                    android:textColor="@color/colorHighlightText"
                    tools:text="**** 4410"/>
            </LinearLayout>
        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <Button
            android:id="@+id/btn_return"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_alignParentBottom="true"
            android:background="@color/colorButtonColor"
            android:textColor="@color/colorWhite"
            android:textAllCaps="false"
            android:fontFamily="@string/font_family_medium"
            android:textSize="@dimen/size_x"
            android:text="@string/txt_return"/>

</RelativeLayout>